--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 
         </div>
         <div class="mainImage">
-            <div class="TitleOfImage">
+            <!-- <div class="TitleOfImage">
                 <img src="images/jec logo QQ.png" alt="">
                 <div class="TOItxt">
                     <p>Robotics Laboratory</p>
                     <p>10th March 2025</p>
                 </div>
-            </div>
-            <img src="images/Home img.JPG" alt="">
+            </div> -->
+            <img src="images/sshome.png" alt="">
         </div>
     </div>
 
