--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>10th March 2025</p>
                 </div>
             </div> -->
-            <img src="images/sshome.png" alt="">
+            <img src="images/homeimg.png" alt="">
         </div>
     </div>
 
