--- a/index.html
+++ b/index.html
@@ -92,33 +92,38 @@
     <!-- ========================Sec 1: HOME======================== -->
 
     <nav class="nav w-full h-14 bg-[#1e2a78]">
-        <div class="flex justify-around h-full items-center max-w-8/10 m-auto">
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107" href="">Home</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107" href="">Updates</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107" href="">Projects</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107" href="">Equipments</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107 max-sm:hidden" href="">Institute</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107 max-sm:hidden" href="">Contact Us</a>
+        <div class="flex justify-around h-full items-center max-w-[90%] m-auto">
+            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+                href="">Home</a>
+            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+                href="">Updates</a>
+            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+                href="">Projects</a>
+            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+                href="">Equipments</a>
+            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107 max-sm:hidden"
+                href="">Institute</a>
+            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107 max-sm:hidden"
+                href="">Contact Us</a>
         </div>
     </nav>
 
 
-    <div class="home lg:relative lg:h-[calc(100vh-140px)] max-lg:h-auto max-lg:flex max-lg:flex-col-reverse max-lg:items-center">
- 
-        <div class="view lg:absolute lg:top-[17vh] lg:left-[7vw] lg:z-2 lg:w-[37vw] text-white max-lg:w-[70vw] max-lg:mb-[5vh]">
-            <h1 class="text-3xl font-semibold">IOT & Robotics Lab</h1>
-            <p class="font-light mt-4">At the heart of cutting-edge research and hands-on learning, our Robotics & IoT
-                Lab is
-                a hub for
-                engineering
-                minds to explore, build, and innovate. Join us as we shape the future — one sensor, one bot, one idea at
-                a
-                time.
+    <div
+        class="home lg:relative lg:h-[calc(100vh-140px)] max-lg:h-auto max-lg:flex max-lg:flex-col-reverse max-lg:items-center">
+
+        <div
+            class="view lg:absolute lg:top-[17vh] lg:left-[7vw] lg:z-2 lg:w-[37vw] text-white max-lg:w-[80vw] max-lg:mb-[5vh]">
+            <h1 class="text-3xl font-semibold max-lg:text-2xl">IOT & Robotics Lab</h1>
+            <p class="font-light mt-4 max-lg:text-md">At the heart of cutting-edge research and hands-on learning, our Robotics & IoT
+                Lab is a hub for engineering minds to explore, build, and innovate. Join us as we shape the future — one
+                sensor, one bot, one idea at a time.
             </p>
             <button id="view" class="mt-3 hover:scale-108 transition-transform duration-200 ">View</button>
 
         </div>
-        <div class="mainImage lg:w-[40vw] lg:absolute lg:top-[8vh] lg:right-[5vw] lg:z-2 max-lg:w-[70vw] max-lg:my-[4vh] ">
+        <div
+            class="mainImage lg:w-[40vw] lg:absolute lg:top-[8vh] lg:right-[5vw] lg:z-2 max-lg:w-[80vw] max-lg:my-[4vh] ">
             <img src="images/homeimg2.png" alt="">
         </div>
     </div>
@@ -127,9 +132,10 @@
 
     <div class="videosec w-full flex flex-col justify-center items-center lg:h-[110vh] max-lg:h-[60vh]">
 
-        <video class="lg:w-[55vw] mb-[5px] rounded-2xl max-lg:w-[80vw]" controls src="images/Atlas - Partners in Parkour.mp4"></video>
+        <video class="lg:w-[55vw] mb-[5px] rounded-2xl max-lg:w-[85vw]" controls
+            src="images/Atlas - Partners in Parkour.mp4"></video>
         <div
-            class="trackRecords transition-transform duration-200 hover:scale-101 h-[110px] lg:w-[55vw] max-lg:w-[80vw] bg-white rounded-2xl flex justify-between items-center border-1 border-[#d3d3d3] py-8 px-15 ">
+            class="trackRecords transition-transform duration-200 hover:scale-101 h-[110px] lg:w-[55vw] max-lg:w-[85vw] bg-white rounded-2xl flex justify-between items-center border-1 border-[#d3d3d3] py-8 lg:px-15 ">
             <div class="track flex flex-col justify-content-center items-center">
                 <h2 class="text-[28px] font-light">15+</h2>
                 <p class="mt-1 text-xs font-normal text-[#919090]">Lab</p>
@@ -159,9 +165,9 @@
 
 
         <div class="paragraph flex justify-center gap-[30px] w-full max-lg:flex-col max-lg:items-center">
-            <img class="lg:w-[32vw] rounded-xl transition-transform duration-200 ease-in-out hover:scale-101 max-lg:w-[70vw]"
+            <img class="lg:w-[32vw] rounded-xl transition-transform duration-200 ease-in-out hover:scale-101 max-lg:w-[80vw]"
                 src="images/instruments img.jpg" alt="">
-            <div class="txt lg:w-[45vw] max-lg:w-[70vw]">
+            <div class="txt lg:w-[45vw] max-lg:w-[80vw]">
                 <h2 class="mt-[15px] text-2xl font-semibold">Introduction</h2>
                 <p class="mt-[13px] text-justify text-md">Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry. Lorem Ipsum has been the
@@ -179,7 +185,7 @@
             </div>
         </div>
         <div class="paragraph flex justify-center gap-[30px] max-lg:flex-col-reverse max-lg:items-center">
-            <div class="txt lg:w-[45vw] max-lg:w-[70vw]">
+            <div class="txt lg:w-[45vw] max-lg:w-[80vw]">
                 <h2 class="mt-[15px] text-2xl font-semibold">Guidance</h2>
                 <p class="mt-[13px] text-justify text-md">Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry. Lorem Ipsum has been the
@@ -194,7 +200,7 @@
                 <button id="teamm" class="mt-4 transition-transform duration-100 ease-in-out hover:scale-103 ">Team
                     Members</button>
             </div>
-            <img class="lg:w-[32vw] rounded-xl transition-transform duration-200 ease-in-out hover:scale-101 max-lg:w-[70vw]"
+            <img class="lg:w-[32vw] rounded-xl transition-transform duration-200 ease-in-out hover:scale-101 max-lg:w-[80vw]"
                 src="images/guidance image.jpg" alt="">
         </div>
     </div>
@@ -202,10 +208,11 @@
     <!--================================= Sec 4: Message ================================ -->
 
     <div class="message lg:pt-[10vh] lg:h-[80vh] max-lg:h-auto max-lg:my-[5vh]">
-        <h1 class="text-center pb-[30px] text-3xl font-semibold text-center lg:mb-[10vh] max-lg:mb-[6vh]">Mentor's Message </h1>
+        <h1 class="text-center pb-[30px] text-3xl font-semibold text-center lg:mb-[10vh] max-lg:mb-[6vh]">Mentor's
+            Message </h1>
         <div class="ccontainer lg:max-w-[80vw] m-auto flex  h-auto max-lg:flex-col lg:gap-[3vw] max-lg:gap-[5vh]">
             <div
-                class="cards transition-transform duration-100 ease-in-out pb-5 px-[25px] bg-white m-auto rounded-3xl h-auto lg:w-[25vw] max-lg:w-[60vw]">
+                class="cards transition-transform duration-100 ease-in-out pb-5 px-[25px] bg-white m-auto rounded-3xl h-auto lg:w-[25vw] max-lg:w-[70vw]">
                 <img class="w-[80px] relative top-[-45px] left-[-5px] mb-[-25px]" src="images/principle.png" alt="">
                 <div class="box">
                     <p class="text-[13px]">1960s with the release of Letraset sheets containing Lorem Ipsum release of
@@ -218,7 +225,7 @@
                 </div>
             </div>
             <div
-                class="cards transition-transform duration-100 ease-in-out pb-5 px-[25px] bg-white m-auto rounded-3xl h-auto lg:w-[25vw] max-lg:w-[60vw]">
+                class="cards transition-transform duration-100 ease-in-out pb-5 px-[25px] bg-white m-auto rounded-3xl h-auto lg:w-[25vw] max-lg:w-[70vw]">
                 <img class="w-[80px] relative top-[-45px] left-[-5px] mb-[-25px]" src="images/principle.png" alt="">
                 <div class="box">
                     <p class="text-[13px]">1960s with the release of Letraset sheets containing Lorem Ipsum release of
@@ -231,7 +238,7 @@
                 </div>
             </div>
             <div
-                class="cards transition-transform duration-100 ease-in-out pb-5 px-[25px] bg-white m-auto rounded-3xl h-auto lg:w-[25vw] max-lg:w-[60vw]">
+                class="cards transition-transform duration-100 ease-in-out pb-5 px-[25px] bg-white m-auto rounded-3xl h-auto lg:w-[25vw] max-lg:w-[70vw]">
                 <img class="w-[80px] relative top-[-45px] left-[-5px] mb-[-25px]" src="images/principle.png" alt="">
                 <div class="box">
                     <p class="text-[13px]">1960s with the release of Letraset sheets containing Lorem Ipsum release of
@@ -253,7 +260,7 @@
     <!-- =================================Sec 5 : Footer ===================== -->
 
     <footer class="bg-black py-[5vh]">
-        <div class="upperf h-[75%] w-[80%] m-auto flex justify-between items-center max-lg:flex-col max-lg:gap-[3vh]">
+        <div class="upperf h-[75%] w-[80%] m-auto flex justify-between items-center max-lg:flex-col max-lg:gap-[5vh]">
             <div class="collegeDetails lg:w-[40%] max-lg:w-[70vw]">
                 <div class="footercollege h-auto flex items-center">
                     <img class="h-[42px] pr-2" src="/images/jec logo QQ.png" alt="">
