--- a/index.html
+++ b/index.html
@@ -135,29 +135,30 @@
         <video class="lg:w-[55vw] mb-[5px] rounded-2xl max-lg:w-[85vw]" controls
             src="images/Atlas - Partners in Parkour.mp4"></video>
         <div
-            class="trackRecords transition-transform duration-200 hover:scale-101 h-[110px] lg:w-[55vw] max-lg:w-[85vw] bg-white rounded-2xl flex justify-between items-center border-1 border-[#d3d3d3] py-8 lg:px-15 ">
+            class="trackRecords transition-transform duration-200 hover:scale-101 h-[110px] lg:w-[55vw] max-lg:w-[85vw] bg-white rounded-2xl flex lg:justify-between max-lg:justify-around items-center border-1 border-[#d3d3d3] py-8 lg:px-15 max-lg:px-2">
             <div class="track flex flex-col justify-content-center items-center">
-                <h2 class="text-[28px] font-light">15+</h2>
-                <p class="mt-1 text-xs font-normal text-[#919090]">Lab</p>
-                <p class="text-xs text-[#919090]">Equipments</p>
+                <h2 class="text-[28px] max-lg:text-[24px] font-light">15+</h2>
+                <p class="mt-1 lg:text-xs max-lg:text-[11px] font-normal text-[#919090]">Lab</p>
+                <p class="lg:text-xs max-lg:text-[11px] text-[#919090]">Equipments</p>
             </div>
             <div class="track flex flex-col justify-content-center items-center">
-                <h2 class="text-[28px] font-light">5+</h2>
-                <p class="mt-1 text-xs font-normal text-[#919090]">Lab</p>
-                <p class="text-xs text-[#919090]">Projects</p>
+                <h2 class="text-[28px] max-lg:text-[24px] font-light">5+</h2>
+                <p class="mt-1 lg:text-xs max-lg:text-[11px] font-normal text-[#919090]">Lab</p>
+                <p class="lg:text-xs max-lg:text-[11px] text-[#919090]">Projects</p>
             </div>
             <div class="track flex flex-col justify-content-center items-center">
-                <h2 class="text-[28px] font-light">1+</h2>
-                <p class="mt-1 text-xs font-normal text-[#919090]">Events</p>
-                <p class="text-xs text-[#919090]">Conducted</p>
+                <h2 class="text-[28px] max-lg:text-[24px] font-light">1+</h2>
+                <p class="mt-1 lg:text-xs max-lg:text-[11px] font-normal text-[#919090]">Events</p>
+                <p class="lg:text-xs max-lg:text-[11px] text-[#919090]">Conducted</p>
             </div>
             <div class="track flex flex-col justify-content-center items-center">
-                <h2 class="text-[28px] font-light">10+</h2>
-                <p class="mt-1 text-xs font-normal text-[#919090]">Number</p>
-                <p class="text-xs text-[#919090]">of Members</p>
+                <h2 class="text-[28px] max-lg:text-[24px] font-light">10+</h2>
+                <p class="mt-1 lg:text-xs max-lg:text-[11px] font-normal text-[#919090]">Number</p>
+                <p class="lg:text-xs max-lg:text-[11px] text-[#919090]">of Members</p>
             </div>
         </div>
     </div>
+
 
     <!--  ==================Sec 3: Introduction =================-->
 
