--- a/index.html
+++ b/index.html
@@ -91,19 +91,20 @@
 
     <!-- ========================Sec 1: HOME======================== -->
 
+
     <nav class="nav w-full h-14 bg-[#1e2a78]">
         <div class="flex justify-around h-full items-center max-w-[90%] m-auto">
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+            <a class="text-white text-base active:transition-transform active:duration-80 active:ease-in-out active:scale-107 hover:transition-transform hover:duration-80 hover:ease-in-out hover:scale-107"
                 href="">Home</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+            <a class="text-white text-base active:transition-transform active:duration-80 active:ease-in-out active:scale-107 hover:transition-transform hover:duration-80 hover:ease-in-out hover:scale-107"
                 href="">Updates</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+            <a class="text-white text-base active:transition-transform active:duration-80 active:ease-in-out active:scale-107 hover:transition-transform hover:duration-80 hover:ease-in-out hover:scale-107"
                 href="">Projects</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107"
+            <a class="text-white text-base active:transition-transform active:duration-80 active:ease-in-out active:scale-107 hover:transition-transform hover:duration-80 hover:ease-in-out hover:scale-107"
                 href="">Equipments</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107 max-sm:hidden"
+            <a class="text-white text-base active:transition-transform active:duration-80 active:ease-in-out active:scale-107 hover:transition-transform hover:duration-80 hover:ease-in-out hover:scale-107 max-sm:hidden"
                 href="">Institute</a>
-            <a class="text-white text-base transition-transform duration-80 ease in out hover:scale-107 max-sm:hidden"
+            <a class="text-white text-base active:transition-transform active:duration-80 active:ease-in-out active:scale-107 hover:transition-transform hover:duration-80 hover:ease-in-out hover:scale-107 max-sm:hidden"
                 href="">Contact Us</a>
         </div>
     </nav>
