--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
         }
 
         #view {
-            border: none;
-            width: 55px;
-            height: 32px;
-            border-radius: 30px;
-            color: white;
-            font-size: 12px;
-            background: grad;
             background: linear-gradient(90deg, rgb(19, 129, 231), rgba(8, 74, 188, 1));
         }
 
@@ -120,7 +113,7 @@
                 Lab is a hub for engineering minds to explore, build, and innovate. Join us as we shape the future — one
                 sensor, one bot, one idea at a time.
             </p>
-            <button id="view" class="mt-3 hover:scale-108 transition-transform duration-200 ">View</button>
+  <button id="view" class=" border-none h-[36px] text-[13px] w-[63px] mt-4 hover:scale-105 active:scale-105 transition-transform duration-140 rounded-4xl">View</button>
 
         </div>
         <div
