--- a/index.html
+++ b/index.html
@@ -42,14 +42,6 @@
         }
 
         #teamm {
-            margin-top: 6px;
-            border: none;
-            width: 115px;
-            height: 39px;
-            border-radius: 45px;
-            color: white;
-            font-size: 11px;
-            background: grad;
             background: linear-gradient(90deg, rgb(19, 129, 231), rgba(8, 74, 188, 1));
         }
 
@@ -192,7 +184,7 @@
 
                 </p>
 
-                <button id="teamm" class="mt-4 transition-transform duration-100 ease-in-out hover:scale-103 ">Team
+            <button id="teamm" class="rounded-4xl text-white text-[13px] mt-4 border-none w-[130px] h-[42px]  transition-transform duration-100 ease-in-out hover:scale-103 active:scale-103 ">Team
                     Members</button>
             </div>
             <img class="lg:w-[32vw] rounded-xl transition-transform duration-200 ease-in-out hover:scale-101 max-lg:w-[80vw]"
