--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
 
     <footer class="bg-black py-[5vh]">
         <div class="upperf h-[75%] w-[80%] m-auto flex justify-between items-center max-lg:flex-col max-lg:gap-[5vh]">
-            <div class="collegeDetails lg:w-[40%] max-lg:w-[70vw]">
+                        <div class="collegeDetails lg:w-[40%] max-lg:w-[80vw]">
                 <div class="footercollege h-auto flex items-center">
                     <img class="h-[42px] pr-2" src="/images/jec logo QQ.png" alt="">
                     <div class="footercollegeName text-[15px]">
-                        <a class="no-underline font-semibold text-white text-[17px]" href="">Robotics Laboratory</a>
-                        <p class="text-[8px] text-white">Jabalpur Engineering College</p>
+                        <p class="font-semibold text-white text-[16px] mb-[-5px]" href="">Robotics Laboratory</p>
+                        <a class=" text-[10px] text-white no-underline">Jabalpur Engineering College </a>
                     </div>
                 </div>
 
@@ -263,39 +263,42 @@
                 </p>
 
                 <div class="icons mt-3 flex gap-3">
-                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115"
+                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115 active:scale-115"
                         src="images/1.png" alt="">
-                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115"
+                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115 active:scale-115"
                         src="images/2.png" alt="">
-                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115"
+                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115 active:scale-115"
                         src="images/3.png" alt="">
-                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115"
+                    <img class="h-[32px] transition-transform ease-in-out duration-10 hover:scale-115 active:scale-115"
                         src="images/4.png" alt="">
                 </div>
 
 
             </div>
-            <div class="footerTXT flex gap-10 w-auto">
+
+
+            </div>
+            <div class="footerTXT flex max-lg:gap-[8vw] lg:gap-12 w-auto">
                 <div class="column flex flex-col gap-5">
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration- hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration- hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">Home</a>
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">JEC Jabalpur</a>
                 </div>
                 <div class="column flex flex-col gap-5">
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">Projects</a>
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">Updates</a>
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">Lab Equipments</a>
                 </div>
                 <div class="column flex flex-col gap-5">
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">Contact Us</a>
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">Team Members</a>
-                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e]"
+                    <a class="no-underline text-[#ffffff69] text-sm transition-transform ease-in-out duration-80 hover:scale-109 hover:text-[#ffffff8e] active:scale-107 active:text-[#ffffff8e]"
                         href="">Verify Certificates</a>
                 </div>
             </div>
