--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 <body>
 
-    <div class="h-[80px] flex items-center ">
-        <img class="pl-6 mr-3 h-14 w-auto" src="./images/jec logo QQ.png" alt="">
+    <div class="h-[80px] flex items-center max-md:h-[60px]">
+        <img class="pl-6 mr-3 h-14 w-auto max-md:h-10" src="./images/jec logo QQ.png" alt="">
         <div class="collegeName">
-            <p class="text-2xl font-semibold">Robotics Laboratory</p>
-            <a class="no-underline text-black text-sm" target="_blank" href="https://www.jecjabalpur.ac.in/">Jabalpur
+            <p class="text-2xl font-semibold max-md:text-xl max-md:mb-[-8px]">Robotics Laboratory</p>
+            <a class="no-underline text-black text-sm max-md:text-xs" target="_blank" href="https://www.jecjabalpur.ac.in/">Jabalpur
                 Engineering College</a>
         </div>
     </div>
