--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
         </div>
     </div>
 
-    <!--================================= Sec 4: Message ================================ -->
+    <!--================================= Sec 4: Mentors Message ================================ -->
 
     <div class="message lg:pt-[10vh] lg:h-[80vh] max-lg:h-auto max-lg:my-[5vh]">
         <h1 class="text-center pb-[30px] text-3xl font-semibold text-center lg:mb-[10vh] max-lg:mb-[6vh]">Mentor's
             Message </h1>
-        <div class="ccontainer lg:max-w-[80vw] m-auto flex  h-auto max-lg:flex-col lg:gap-[3vw] max-lg:gap-[5vh]">
+        <div class="ccontainer lg:max-w-[80vw] m-auto flex  h-auto max-lg:flex-col lg:gap-[3vw] max-lg:gap-[8vh]">
             <div
                 class="cards transition-transform duration-100 ease-in-out pb-5 px-[25px] bg-white m-auto rounded-3xl h-auto lg:w-[25vw] max-lg:w-[70vw]">
                 <img class="w-[80px] relative top-[-45px] left-[-5px] mb-[-25px]" src="images/principle.png" alt="">
