--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
 
     <div class="h-[80px] flex items-center max-md:h-[70px]">
-        <img class="pl-6 mr-3 h-14 w-auto max-md:h-11" src="./images/jec logo QQ.png" alt="">
+        <img class="pl-6 mr-3 h-14 w-auto max-md:h-11" src="./images/jec logo QQ.webp" alt="">
         <div class="collegeName">
             <p class="text-2xl font-semibold max-md:text-xl max-md:mb-[-8px]">Robotics Laboratory</p>
             <a class="no-underline text-black text-sm max-md:text-xs" target="_blank" href="https://www.jecjabalpur.ac.in/">Jabalpur
@@ -110,7 +110,7 @@
         </div>
         <div
             class="mainImage lg:w-[40vw] lg:absolute lg:top-[8vh] lg:right-[5vw] lg:z-2 max-lg:w-[80vw] max-lg:my-[4vh] ">
-            <img src="images/homeimg2.png" alt="">
+            <img src="images/homeimg2.webp" alt="">
         </div>
     </div>
 
